# UISCoinScriptVM

./: BytesUtil.cpp  BytesUtil.h  CMakeLists.txt  README.md  ScriptExecution.cpp  ScriptExecution.h  ScriptOperator.h  compiled.uiscb  main.cpp  test.uiscb
aes/: aes.h  aes_wrapper.cpp  aes_wrapper.h
crypto/: sha512.cpp  sha512.h
io/: io.h
zlib/: zlib_wrapper.cpp  zlib_wrapper.h
